# UniPyProject

./: .gitignore  JenkinsFile  README.md  environment.yml  pyproject.toml  requirements.txt
UniProjectToolkit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
UniProjectToolkit/Test_Suite/: test_GC_Percent.py  test_count_nucleotides.py  test_gapping_dna.py  test_loop.py  test_protein_print.py  test_reverse_complement.py  testing_modules.py
UniProjectToolkit/modules/: API_file.py  Dictionaries.py  GCcontent.py  GappingDNA.py  Genbank.py  Problem3A.py  Problem3B.py  Problem3C.py  Problem4.py  ReverseComplement.py  Reverse_Complement.py  SixFrameTranslation.py  Translate.py  count_nucleotides.py  logger.py  new_reverse.py  new_six_frame.py
UniProjectToolkit/modules/utils/: entrez_fetch.py  logger.py
UniProjectToolkit/utils/: entrez_fetch.py
genbank_task/: genbank_task.py
