[project]
name = "UniProjectToolkit"
version = "0.0.1"
description = "Toolkit that manipulates DNA among other functions"
license = {file = "LICENSE.txt"}
authors = [{name = "Harbi"}]
readme = "README.md"
keywords = [
    "bioinformatics",
    "DNA Sequence",
]
requires-python = ">=3.13"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.13"
]

# Dynamically load dependencies
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["."]  # Look for packages in the  root directory
include = ["UniProjectToolkit*"]

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"